--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: python
 sudo: required
-python: 
-  - 3.7
+python:
+- 3.7
 install:
-  - pip install -r requirements.txt
+- pip install -r requirements.txt
 script:
-  - python test.py
+- python test.py
+before_install:
+- openssl aes-256-cbc -K $encrypted_84adcc736132_key -iv $encrypted_84adcc736132_iv
+  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
