--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
   ssh_known_hosts:
   - 47.101.147.73
 before_install:
-- apt-get install sshpass
+- sudo apt-get install sshpass
 
 - openssl aes-256-cbc -K $encrypted_84adcc736132_key -iv $encrypted_84adcc736132_iv
   -in id_rsa.enc -out ~/.ssh/id_rsa -d
