--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
   ssh_known_hosts:
   - 47.101.147.73
 before_install:
-- sudo apt-get install sshpass
+#- sudo apt-get install sshpass
 
 - openssl aes-256-cbc -K $encrypted_84adcc736132_key -iv $encrypted_84adcc736132_iv
   -in id_rsa.enc -out ~/.ssh/id_rsa -d
@@ -17,5 +17,6 @@ install:
 script:
 - python test.py
 after_success:
-- sshpass -p 'zhangkang' ssh zhangkang@47.101.147.73 "bash ~/DialogueRobot/deploy.sh"
+- ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh" 
+#- sshpass -p 'zhangkang' ssh zhangkang@47.101.147.73 "bash ~/DialogueRobot/deploy.sh"
 
