--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ install:
 script:
 - python test.py
 after_success:
-- ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh" 
+- echo '#!/bin/bash' >> test.sh
+- echo 'ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh"' >> test.sh
+- echo 'exit' >> test.sh
+- bash test.sh
+#- ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh" 
 #- sshpass -p 'zhangkang' ssh zhangkang@47.101.147.73 "bash ~/DialogueRobot/deploy.sh"
 
