--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ script:
 - python test.py
 after_success:
 - echo '#!/bin/bash' >> test.sh
-- echo 'ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh"' >> test.sh
-- echo 'exit' >> test.sh
+- echo 'trap "pkill -f $(basename $0);exit 1" SIGINT SIGTERM EXIT ERR' >> test.sh
+- echo 'ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh" &' >> test.sh
+- echo 'echo "OK"' >> test.sh
 - bash test.sh
 #- ssh zhangkang@47.101.147.73 -o StrictHostKeyChecking=no "bash ~/DialogueRobot/deploy.sh" 
 #- sshpass -p 'zhangkang' ssh zhangkang@47.101.147.73 "bash ~/DialogueRobot/deploy.sh"
